--- a/views/user.ejs
+++ b/views/user.ejs
@@ -16,7 +16,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <div class="container">
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-lg-2"></div>
             <div class="col-lg-5">
                 <form class="form-group" action="/user" method="POST">
